# simple-e-commerce

./: pyproject.toml  requirements.txt
authon/: apps.py  serializers.py  urls.py  views.py
ecommerce/: settings.py  urls.py
store/: admin.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_order_review.py  0003_order_delivered_at_order_price_order_shipping_price_and_more.py  0004_remove_orderitem_product_alter_shippingaddress_order.py  0005_alter_order_payment_method.py  0006_alter_order_payment_method.py  0007_alter_order_payment_method.py  0008_alter_orderitem_quantity_alter_product_brand.py  0009_order_products.py  0010_order_tax_price.py  0011_order_user.py  0012_orderitem_product.py
store/static/images/product_images/: linkedin.jfif
